--- a/views/bindirection.ejs
+++ b/views/bindirection.ejs
@@ -1,15 +1,15 @@
 <html>
      <head>
          <meta name="viewport" content="width=device-width,initial-scale=1.0">
-         <title>TELINSO</title>
+         <title>REVIVE</title>
          
+         <link rel="stylesheet" href="/overview.css">
          <link rel="stylesheet" href="/soilhealth.css">
          <script src="/navbar.js" defer></script>
          <script src="/topbtn.js" defer></script>
         <link rel="stylesheet" href="/footer.css">
         <link rel="stylesheet" href="/nav.css">
         <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-        <script src="/soilhealth.js" defer></script>
          <link rel="preconnect" href="https://fonts.googleapis.com">
          <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
          <script src="https://kit.fontawesome.com/01780eab25.js" crossorigin="anonymous"></script>
@@ -17,43 +17,38 @@
          <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
          <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
          <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
          <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
          <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
          <link rel="manifest" href="/site.webmanifest">
-         <style>
-            @media(max-width:800px){
-
-             .header{
-                        background-image:linear-gradient(to bottom, rgba(14, 13, 13, 0.838) 15%,transparent 90%),url(/sad.jpeg);
-                        
-                        
-                    }
-                }
-         </style>
         </head>
      <body>
-      <button onclick="topFunction()" id="myBtn" class="topbtn" title="Go to top"><i class="fa-solid fa-arrow-up"></i></button> 
+      <div id="myBtn2">
+      <a  href="/" class="topbtn2" title="more"><i class="fa-solid fa-house"></i></a>
+      <a  onclick="openmenu()" id="nav" class="topbtn2" title="more"><i class="fa-solid fa-circle-dot"></i></a>
+      <a   class="topbtn2" title="more"><i class="fa-solid fa-user"></i></a>
+      </div>
         
          <section class="header">
             
             <div class="container">
 
             <nav >
-                <a href="/" class="logo"><img src="/logo.png"><span>elinso</span></a>
+            
                <div class="navbtn">
                 <a href="/" class="hero-btn2 heronew"> Home </a>
                 <a class="hero-btn2 heronew"> Product </a>
                 <a class="hero-btn2 heronew"> About </a>
                 <a class="hero-btn2 heronew"> Contact </a>
-                <a class="hero-btn2 heronew"> Subscription </a>
-                <a href="/login" class="hero-btn2"  ><i class="fa-solid fa-user"></i>Log out</a>
+              
+                <a href="/login" class="hero-btn2"  ><i class="fa-solid fa-user"></i>Logout</a>
                 </div>
                 
-            
+                <a class="logo"><img src="/logo.png"></a>
+                
                 <ul id="sidemenu">
-                    <li><a href="#contact" onclick="closemenu()" style="font-size: 13px;"><i class="fa-solid fa-xmark"></i></a></li>
-                    <hr>
+                
                     <li><a href="/">Home</a></li>
                     <hr>
                         <li><a href="#about">Product</a></li>
@@ -63,32 +58,38 @@
                         <li><a href="#contact">Contact</a></li>
                         <hr>
                         <p>
-                            Thank you for choosing Telinso. We value your trust and support. Please free to Contact us anytime
+                            Thank you for choosing Revive. We value your trust and support. Please free to Contact us anytime
                         </p>
                        
-                        <li><a href="login" class="login">Log out</a></li>
-                        <li><a href="/" class="login join">Subscription</a></li>
+                        
                    
                         
                 </ul>
                 
-                <i class="fa-solid fa-user fas" onclick="openmenu()"></i>
+                
             </nav>
-            
+           
              
          </section>
          <section class="overview" >
              
             <div class="row">
                <div class="overview-col">
-                   <h1>DELETE ARCHIVE</h1>
+                   <h1>BIN FINDER</h1>
                    <span class="description"> Description </span>
                    <span class="overview-description">
-                    Are you sure you want to delete this item? This action cannot be undone. Proceed with caution. Confirm deletion to permanently remove the item from the database.
-                             Consider the consequences before proceeding. Your decision will impact the data irreversibly.</span>
+                    Revive transforms waste management with BinFinder. Locate nearby disposal bins effortlessly, optimizing waste disposal for efficiency and sustainability. Say goodbye to wasted time searching and hello to streamlined practices. With BinFinder, ensure proper waste disposal, contributing to a cleaner, greener future. Join the revolution with Revive today.
+                   </span>
                   
                    
-                   
+                   <P>
+                    Empower your agricultural planning with Telinso's Weather Forecast feature. Gain a competitive edge by accessing real time weather
+                     predictions along with a comprehensive 5-day forecast. This invaluable tool equips farmers with the foresight needed to make informed 
+                     decisions, optimizing crop management and resource allocation. Stay ahead of weather fluctuations, mitigate risks, and enhance yield potential.
+                      Telinso simplifies the complexities of farming by delivering accurate and timely weather insights, ensuring that your agricultural operations
+                       align seamlessly with the conditions ahead. 
+                    Elevate your farming experience with Telinso's Weather Forecast feature, where precision meets productivity for a thriving harvest.
+                </P>
                    
                        
                     
@@ -96,50 +97,24 @@
                  
            </div>
            
+           <img src="/binfind.png">
            
-           
-         
-         
        </section>
-       
-         
-       <section class="contact">
-        <h1>Delete Soil Data</h1>
-        <span class="description"> User Instructions</span>
+           <section class="contact">
+            <h1>Bin Location Data</h1>
+            <span class="description"> User Instructions</span>
                    <span class="overview-description">
                     <ul class="overview-description">
-                      <li>Keep in mind that deleted data cannot be recovered once permanently deleted.</li>
-                      <li>To delete, click on the delete icon provided.</li>
-                      <li>For any inquiries, contact the Telinso team for assistance.</li>
+                      <li>Click on 'Show Data' to view the stored data.</li>
+                      <li>Utilize the search bar to find soil data with specific details and by month.</li>
+                      <li>View marked locations on the map for easy reference.</li>
+                      <li>Utilize analytics, crop selection features, and data deletion options for enhanced usability.</li>
                     </ul>
                    </span>
-       
-           
-        <div class="contact-row" >
-            
-           
-                    <div class="data" id="myUL" style="flex-direction: row;">
-                        <div class="soildata" style="grid-template-columns: auto;">
-                        <p><%= soilname %></p>
-                        <P><%= date %></P>
-                        </div>
-                        <div class="feature-archive">
-                        <a href="/alert/delete/<%=id%>"><i class="fa-solid fa-trash"></i></a>
-                        
-                        </div>
-                        
-                       
-                     
-                    </div>
-                    
-                   
-          
-               </div>
-            
-               
-       
-   </section>
+                   <div id="map"></div>
 
+        
+       </section>
 
        <section class="footer">
           
@@ -190,56 +165,58 @@
                 <p>
                     <i class="fa-brands fa-instagram"></i><i class="fa-brands fa-linkedin"></i><i class="fa-brands fa-square-facebook"></i><i class="fa-brands fa-square-x-twitter"></i>
                    <br>
-                   <p > 	&copy; TEAM TELINSO</p>
+                   <p > 	&copy; TEAM TORONO</p>
                 </p>
             </div>
    </section>
    <script
    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDn4lHzl_n5h7vQOz1jthHgTw-geOT5LIA&callback=initMap&libraries=marker&v=beta"
    defer></script>
-    <script>
+   
+
+ 
+ <script>
+  
+
+function initMap() {
+
+const directionsRenderer = new google.maps.DirectionsRenderer();
+const directionsService = new google.maps.DirectionsService();
+const map = new google.maps.Map(document.getElementById("map"), {
+  zoom: 17,
+  center: { lat: 11.9858056 , lng:75.3811667},
+});
+
+directionsRenderer.setMap(map);
+calculateAndDisplayRoute(directionsService, directionsRenderer);
+
+
+function calculateAndDisplayRoute(directionsService, directionsRenderer) {
+  navigator.geolocation.getCurrentPosition(
+      (position) => {
         
-     function searchData() {
-          
-          var input = document.getElementById("myInput").value.toLowerCase();
-          var elements = document.getElementsByClassName("soil-search");
-          var elements2 = document.getElementsByClassName("month-search");
-
-         
-          for (var i = 0; i < elements.length; i++) {
-              
-              var textContent = elements[i].textContent.toLowerCase();
-              var textContent2 = elements2[i].textContent.toLowerCase();
-              if (textContent.includes(input)||textContent2.includes(input)) {
-                  
-                  elements[i].parentElement.parentElement.style.display = "flex";
-              } else {
-                  
-                  elements[i].parentElement.parentElement.style.display = "none";
-              }
-          }
-      }
-      function showCurrentLocation() {
-    if (navigator.geolocation) {
-      navigator.geolocation.getCurrentPosition(
-        (position) => {
-          const lat = position.coords.latitude;
+          const lat =  position.coords.latitude;
           const lng = position.coords.longitude;
+      
 
-          const marker = document.createElement("gmp-advanced-marker");
-          marker.setAttribute("position", `${lat},${lng}`);
-          marker.setAttribute("title", "Current Location");
-          document.getElementById("marker-click-event-example").appendChild(marker);
-        },
-        () => {
-          alert("Error: The Geolocation service failed.");
-        }
-      );
-    } else {
-      alert("Error: Your browser doesn't support geolocation.");
-    }
-  }
-    </script>
+directionsService
+  .route({
+    origin: { lat: lat, lng: lng},
+    destination: { lat:11.9846061, lng:75.3820591 },
+    travelMode:"WALKING",
+  })
+  
+  .then((response) => {
+    directionsRenderer.setDirections(response);
+  })
+
+  .catch((e) => window.alert("Directions request failed due to " + status));
+  })
+}
+
+window.initMap = initMap;
+}
+</script>
 
          </body>
 </html>
