--- a/views/delete.ejs
+++ b/views/delete.ejs
@@ -81,11 +81,12 @@
              
             <div class="row">
                <div class="overview-col">
-                   <h1>DELETE ARCHIVE</h1>
+                   <h1>CONFIRM DELETION</h1>
                    <span class="description"> Description </span>
                    <span class="overview-description">
-                    Are you sure you want to delete this item? This action cannot be undone. Proceed with caution. Confirm deletion to permanently remove the item from the database.
-                             Consider the consequences before proceeding. Your decision will impact the data irreversibly.</span>
+                    This action is essential to prevent interference with previous data. Proceed with caution. 
+                    Confirm deletion to permanently remove the item from the database. Your decision will prevent unwanted interference and ensure data integrity.
+                </span>
                   
                    
                    
@@ -104,13 +105,13 @@
        
          
        <section class="contact">
-        <h1>Delete Soil Data</h1>
+        <h1>Delete Data</h1>
         <span class="description"> User Instructions</span>
                    <span class="overview-description">
                     <ul class="overview-description">
                       <li>Keep in mind that deleted data cannot be recovered once permanently deleted.</li>
+                      <li>Before proceeding with deletion, ensure that the data is saved.</li>
                       <li>To delete, click on the delete icon provided.</li>
-                      <li>For any inquiries, contact the Telinso team for assistance.</li>
                     </ul>
                    </span>
        
@@ -118,13 +119,13 @@
         <div class="contact-row" >
             
            
-                    <div class="data" id="myUL" style="flex-direction: row;">
-                        <div class="soildata" style="grid-template-columns: auto;">
-                        <p><%= soilname %></p>
-                        <P><%= date %></P>
+            <div class="data" id="myUL" style="flex-direction: row;">
+                <div class="soildata" style="grid-template-columns: auto;">
+                        <p>Previous Data</p>
+                        <p>Delete now</p>
                         </div>
                         <div class="feature-archive">
-                        <a href="/alert/delete/<%=id%>"><i class="fa-solid fa-trash"></i></a>
+                        <a href="/delete/delete-data"><i class="fa-solid fa-trash"></i></a>
                         
                         </div>
                         
