--- a/views/farmerfeed.ejs
+++ b/views/farmerfeed.ejs
@@ -3,9 +3,11 @@
          <meta name="viewport" content="width=device-width,initial-scale=1.0">
          <title>TELINSO</title>
          
-         <link rel="stylesheet" href="/savedata.css">
+         <link rel="stylesheet" href="/farmerassist.css">
          <script src="/navbar.js" defer></script>
-         <link rel="stylesheet" href="/footer.css">
+        <link rel="stylesheet" href="/footer.css">
+        <link rel="stylesheet" href="/nav.css">
+        <link rel="stylesheet" href="/overview.css">
          <link rel="preconnect" href="https://fonts.googleapis.com">
          <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
          <script src="https://kit.fontawesome.com/01780eab25.js" crossorigin="anonymous"></script>
@@ -13,6 +15,10 @@
          <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
          <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+         <link rel="manifest" href="/site.webmanifest">
         </head>
      <body>
        
@@ -22,30 +28,36 @@
             <div class="container">
 
             <nav >
+                <a href="/" class="logo"><img src="/logo.png"><span>elinso</span></a>
                <div class="navbtn">
                 <a href="/" class="hero-btn2 heronew"> Home </a>
                 <a class="hero-btn2 heronew"> Product </a>
                 <a class="hero-btn2 heronew"> About </a>
                 <a class="hero-btn2 heronew"> Contact </a>
-                <a href="login" class="hero-btn2"  ><i class="fa-solid fa-user"></i>Log out</a>
+                <a class="hero-btn2 heronew"> Subscription </a>
+                <a href="/login" class="hero-btn2"  ><i class="fa-solid fa-user"></i>Log out</a>
                 </div>
                 
             
                 <ul id="sidemenu">
+                    <li><a href="#contact" onclick="closemenu()" style="font-size: 13px;"><i class="fa-solid fa-xmark"></i></a></li>
+                    <hr>
                     <li><a href="/">Home</a></li>
+                    <hr>
+                        <li><a href="#about">Product</a></li>
+                    <hr>
                         <li><a href="#about">About</a></li>
+                        <hr>
                         <li><a href="#contact">Contact</a></li>
-                        <form action="/signup" method="POST">
-                            
-                            <input type="text" name="username" placeholder="Your Name" >
-                            <input type="email" name="password" placeholder="Your Email">
-                            
-                            <button type="submit" class="btn btn1">Login now</a></button>
-                            
-                            
-                        </form> 
-                        <li><a href="#contact" onclick="closemenu()" style="font-size: 13px;">Close Window</a></li>
-                           
+                        <hr>
+                        <p>
+                            Thank you for choosing Telinso. We value your trust and support. Please free to Contact us anytime
+                        </p>
+                       
+                        <li><a href="login" class="login">Log out</a></li>
+                        <li><a href="/" class="login join">Subscription</a></li>
+                   
+                        
                 </ul>
                 
                 <i class="fa-solid fa-user fas" onclick="openmenu()"></i>
@@ -53,37 +65,54 @@
             
              
          </section>
-         
-           <section class="contact">
+         <section class="overview" >
+             
             <div class="row">
-               <div class="contact-col">
+               <div class="overview-col">
+                   <h1>FARMER ASSIST</h1>
+                   
+                   
                   
                    
                   
-                   <h1>User Login</h1>
-                
-                    <form action="/test" method="POST">
-                        
-                        <input type="text" name="library" placeholder="Bin 1" required>
-                        <input type="text" name="canteen" placeholder="Bin 2" required>
-                        <input type="text" name="portico" placeholder="Bin 3" required>
-                        <input type="text" name="auditorium" placeholder="Bin 4" required> 
-                        <input type="text" name="ground" placeholder="Bin 5" required> 
-                        
-                        <button type="submit" class="btn btn2">Send</a></button>
-                    </form> 
+                       
                     
-
+               </div>
                  
-                </div>
-                
            </div>
+          
+       </section>
+         
+           <section class="contact">
+            <% feeddata.forEach((row,index) => { %>
+            <div class="contact-row">
+               
+                        
+                <div class="data">
+                    <img src="/<%= row.image %>">
+                        <div class="data-text">
+                        <h3><%= row.title %> </h3>
+                        <p> <%= row.message %> </p>
+                        <a href="/farmerfeed"> read more <i class="fa-solid fa-arrow-right"></i> </a>
+                        </div>
+                   
+                    </div>
+                            
+        
+                        </div>
+                        
+                        
+              
+                   </div>
+                   <% })  %>
+                   
            
        </section>
 
        <section class="footer">
           
-            <div class="row">
+        <div class="row">
+           
                 <div class="footer-col" >
                     <p>Soil Analysis</p>
                     <p>Visualization</p>
@@ -91,6 +120,7 @@
                     <p>Weather Forecast</p>
                   
                         </div>
+                        <hr>
                 <div class="footer-col"  >
                       <p>Data Analytics</p>
                       <p>Cloud computing</p>
@@ -98,6 +128,7 @@
                       <p>Artificial intelligence</p>
                            
                                     </div>
+                                    <hr>
                 <div class="footer-col"  >
                    <p>Empowernment</p>
                    <p>Innovation</p>
@@ -106,7 +137,7 @@
                     
                 </div>
             
-            
+            <hr>
            
             <div class="footer-col"  >
                 
@@ -116,7 +147,8 @@
                 <p>About</p>
                 <p>Contact</p>
             </div>
-    </div>
+            <hr>
+         </div>
             <div class="footer-col" style="text-align: center;" >     
                    <p>
                     Telinso is an IoT-based solution that provides soil health data to farmers and agriculture enthusiasts. It consists of a comprehensive suite of software and hardware that can measure and monitor soil conditions and nutrients, such as pH, moisture, temperature, nitrogen, phosphorus, potassium, and more. By using Telinso, you can access real-time and accurate information about your soil health, and get customized recommendations on how to improve your crop productivity and soil quality. Telinso is a user-friendly, cost-effective, and scalable system that can help you optimize your farming practices and achieve sustainable agriculture. Learn more about Telinso and how it can benefit you. Contact us today
@@ -128,7 +160,7 @@
                    <br>
                    <p > 	&copy; TEAM TELINSO</p>
                 </p>
-         </div>
+            </div>
    </section>
               
          </body>
